fix z-index on .sidebar__nav--open

--- a/css/style.scss
+++ b/css/style.scss
@@ -321,6 +321,7 @@ body {
 	visibility: unset;
 	transform: translateX(0);
 	opacity: 1;
+	z-index: 1;
 }
 
 // Navigation Close
